--- a/src/assets/config/greeting-config.json
+++ b/src/assets/config/greeting-config.json
@@ -1,3 +1,3 @@
 {
-  "greetingUrl": "http://ec2-18-223-113-246.us-east-2.compute.amazonaws.com:8081/greet?name="
+  "greetingUrl": "http://35.232.215.157:8081/greet?name="
 }
